--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,51 @@
-/.idea/
-/.vscode/
-/data/
-/dist/
-/logs/
+# 可执行文件
+mock-api-server
+mock-api-server.exe
+*.exe
+
+# 构建产物
+dist/
+build/
+
+# 数据文件
+data/mock_apis.json
+
+# 日志文件
+logs/
+*.log
+
+# 临时文件
+*.tmp
+*.temp
+.DS_Store
+Thumbs.db
+
+# IDE文件
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Go相关
+vendor/
+*.test
+*.prof
+coverage.out
+
+# 系统文件
+.env
+.env.local
+.env.*.local
+
+# PID文件
+*.pid
+
+# 备份文件
+*.backup
+*.bak
+
+# 压缩文件
+*.zip
+*.tar.gz
+*.rar
